# pathfilter

./: .gitignore  CLAUDE.md  README.md  main.py  nameres.md  nodenorm.md  pyproject.toml  rerun_all.sh
archive/: filter.py
docs/: DATA_FORMAT_ANALYSIS.md
scripts/: aggregate_metapaths.py  analyze_node_path_counts.py  best_filters_table.py  calculate_node_degrees.py  compile_query_types.py  degree_per_path.py  join_path_counts_with_degrees.py  metapath_enrichment.py  normalize_input_data.py  normalize_missing_nodes.py  plot_degree_vs_info_content.py  plot_degree_vs_pathcount.py  plot_metapath_consistency.py  plot_metapath_scatter.py  plot_path_count_vs_hit_fraction.py  plot_precision_recall.py  plot_unreliable_metapaths.py  run_evaluation.py  sort_metapaths.py  visualize_results.py
scripts/metapaths/: README.md  analyze_3hop_overlap.py  analyze_3hop_prediction.ipynb  analyze_3hop_prediction.py  analyze_direction_performance.py  estimate_total_runtime.py  generate_benchmark_samples.py  plot_matrix_ratio_vs_memory_ratio.py  plot_matrix_ratio_vs_time_ratio.py  run_benchmark_samples.py  type_utils.py
src/pathfilter/: __init__.py  cli.py  curie_utils.py  evaluation.py  filters.py  matching.py  metapath_analysis.py  normalization.py  path_loader.py  query_loader.py
tests/: __init__.py  test_cli_combinations.py  test_curie_utils.py  test_evaluation.py  test_filters.py  test_matching.py  test_normalization.py  test_normalize_input_data.py  test_path_loader.py  test_query_loader.py
