[project]
name = "pathfilter"
version = "0.1.0"
description = "Path filtering and evaluation for Pathfinder queries"
requires-python = ">=3.12"
dependencies = [
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (integration tests with real data/API calls)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pathfilter"]
